Fix overflow formatting

--- a/packages/loom-ui/src/renderer/LoomUI/Navigator/NodeNavigator.scss
+++ b/packages/loom-ui/src/renderer/LoomUI/Navigator/NodeNavigator.scss
@@ -7,8 +7,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   position: relative;
-  display: flex;
-  flex-flow: row nowrap;
   align-items: center;
   height: 27px;
 
@@ -18,6 +16,10 @@
 
   &__container--component .node-nav {
     background-color: #FFE8D0;
+  }
+
+  &__title {
+    display: inline;
   }
 
   i {
